[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "dafni-cli"
description = "A CLI to access the DAFNI APIs from the command line"
readme = "README.md"
authors = [{ name = "DAFNI Facility", email = "support@dafni.ac.uk" }]
dependencies = [
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click>=8.3.1",
    "idna==3.11",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "urllib3>=2.6.1",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Dynamic versioning using setuptools-git-versioning
dynamic = ["version"]

[tool.setuptools-git-versioning]
enabled = true

[project.urls]
"Documentation" = "https://github.com/dafnifacility/cli/blob/main/docs/dafni_cli.md"
"Release notes" = "https://github.com/dafnifacility/cli/releases"
"Source" = "https://github.com/dafnifacility/cli"
"Issue Tracker" = "https://github.com/dafnifacility/cli/issues"

[project.scripts]
dafni = "dafni_cli.dafni:dafni"

[options]
package_dir = "dafni_cli"
