[metadata]
name = dafni-cli
version = 0.0.1
author = DAFNI Facility
author_email = support@dafni.ac.uk
description = A CLI to access the DAFNI APIs from the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dafnifacility/cli
project_urls =
    Bug Tracker = https://github.com/dafnifacility/cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dafni_cli
packages = find:
python_requires = >=3.9
install_requires =
    requests
    python-dateutil
    click
[options.entry_points] 
console_scripts =
    dafni=dafni_cli.dafni:dafni

[options.packages.find]
where = dafni_cli